# ibkr-mcp

./: .gitignore  CLAUDE.md  CONTEXT.md  pyproject.toml
docker/: .env.example  README.md  compose.yml
docs/adr/: 0001-two-layer-trading-safety.md  0002-stdio-uvx-distribution.md  0003-audit-log.md
src/ibkr_mcp/: __main__.py  config.py  connection.py  shaper.py
tests/: test_config.py  test_connection.py  test_shaper.py
