[project]
name = "ibkr-mcp"
version = "0.1.0"
description = "MCP server for Interactive Brokers — exposes trading and market data to LLM agent clients over stdio."
requires-python = ">=3.11"
dependencies = [
    "ib-async>=1.0",
    "mcp>=1.0",
]

[project.scripts]
ibkr-mcp = "ibkr_mcp.__main__:main"

[dependency-groups]
dev = ["pytest>=8.0"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/ibkr_mcp"]

[tool.pytest.ini_options]
testpaths = ["tests"]
